Add more miscellaneous macros and unified macros header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,10 @@ target_sources(${PROJECT_NAME}
     PUBLIC FILE_SET HEADERS TYPE HEADERS FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/attr.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/compiler.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/misc.hpp
+
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/assert.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros.hpp
 
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/source/assert.cpp
