Add platform definition macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ target_sources(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/attr.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/compiler.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/misc.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/platform.hpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/assert.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros.hpp
