Implement memory-mapped files for UNIX and Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,11 @@ target_sources(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros/platform.hpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/condvar.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/memory_mapped.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/mutex.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/read_write_lock.hpp
 
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/alignment.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/assert.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/macros.hpp
         ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/scope_guard.hpp
@@ -64,13 +66,26 @@ target_sources(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/source/assert.cpp
     )
 
-if (WIN32)
+if(WIN32)
     # These source files are only included for Windows builds.
     target_sources(${PROJECT_NAME}
         PUBLIC
             ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/impl/condvar.os.windows.hpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/impl/memory_mapped.os.windows.hpp
             ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/impl/mutex.os.windows.hpp
             ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/impl/read_write_lock.os.windows.hpp
+
+            ${CMAKE_CURRENT_SOURCE_DIR}/source/os/impl/memory_mapped.os.windows.cpp
+        )
+endif()
+
+if(UNIX)
+    # These source files are only included for UNIX builds.
+    target_sources(${PROJECT_NAME}
+        PUBLIC
+            ${CMAKE_CURRENT_SOURCE_DIR}/include/vtils/os/impl/memory_mapped.unix.hpp
+
+            ${CMAKE_CURRENT_SOURCE_DIR}/source/os/impl/memory_mapped.unix.cpp
         )
 endif()
 
